--- a/views/admin/pages/order/order.view.ejs
+++ b/views/admin/pages/order/order.view.ejs
@@ -49,9 +49,6 @@
                 <div class="col-12">
                   <%-include("../../partials/statusFilter.view.ejs") %>
                 </div>
-                <!-- <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"> -->
-                  <%#-include("../../partials/priceFilter.view.ejs") %>
-                <!-- </div> -->
               </div>
             </div>
           </div>
@@ -269,6 +266,14 @@
                         <td><%= moment(order.createdAt).format('DD/MM/YYYY - h:mm:ss') %></td>
                         <td><%= order.position %></td>
                         <td>
+                          <div class="d-flex flex-wrap gap-1">
+                            <a
+                            href="<%= prefixAdmin %>/orders/update/<%= order._id %>"
+                            data-id="<%= order._id %>"
+                            class="btn btn-primary btn-sm btn-update"
+                          >
+                            <i class="bi bi-pencil-square me-1"></i>Sửa
+                          </a>
                           <button
                             class="btn btn-danger btn-sm ml-1 btn-delete"
                             data-id="<%= order._id %>"
@@ -279,6 +284,7 @@
                             href="<%= prefixAdmin %>/orders/detail/<%= order._id %>"
                             class="btn btn-outline-black text-black border-black btn-sm"
                             >Chi tiết<i class="bi bi-arrow-right-short ml-1"></i></a>
+                          </div>
                         </td>
                       </tr>
                       <% }) %> <% } %>
