--- a/views/admin/pages/product/update.view.ejs
+++ b/views/admin/pages/product/update.view.ejs
@@ -73,8 +73,8 @@
                 <div class="form-group mb-4">
                   <label for="description" class="fw-bold">Mô tả ngắn</label>
                   <textarea name="description" class="form-control" id="description">
-                    <%= product.description %>
-                  </textarea>
+<%= product.description %></textarea
+                  >
                 </div>
               </div>
 
