--- a/views/admin/partials/search.view.ejs
+++ b/views/admin/partials/search.view.ejs
@@ -5,10 +5,11 @@
       name="keyword"
       value="<%= keyword %>"
       placeholder="<%= placeholder  %>"
+      id="input-search"
       class="form-control input-search"
     />
     <div class="input-group-append btn-group">
-      <button type="submit" class="btn btn-primary btn-search">
+      <button type="button" class="btn btn-primary btn-search">
         <i class="bi bi-search"></i>
       </button>
       <button type="button" class="btn btn-primary btn-remove-search">
