--- a/views/admin/pages/productCategory/update.view.ejs
+++ b/views/admin/pages/productCategory/update.view.ejs
@@ -69,8 +69,8 @@
                 <div class="form-group mb-4">
                   <label for="description" class="fw-bold">Mô tả</label>
                   <textarea name="description" id="description" rows="5" class="form-control">
-                    <%= category.description %>
-                  </textarea>
+<%= category.description %></textarea
+                  >
                 </div>
               </div>
               <div class="col-12">
