--- a/views/admin/pages/role/update.view.ejs
+++ b/views/admin/pages/role/update.view.ejs
@@ -58,8 +58,8 @@
                   Mô tả quyền
                 </label>
                 <textarea name="description" id="description" rows="5" class="form-control">
-                  <%= role.description %>
-                </textarea>
+<%= role.description %></textarea
+                >
               </div>
             </div>
           </div>
