--- a/views/client/pages/about/about.view.ejs
+++ b/views/client/pages/about/about.view.ejs
@@ -61,7 +61,7 @@
 
       <section class="about-detail">
         <div class="container">
-          <div class="row d-flex gap-md-0 gap-5">
+          <div class="row d-flex gap-lg-0 gap-5">
             <div class="col-lg-6 col-12">
               <div
                 class="d-flex flex-column justify-content-center w-100 h-100 gap-3 abount-detail-content-box"
