--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -224,7 +224,7 @@
             >
           </li>
           <li class="navheader-menu-item">
-            <a href="/contact.html" <% if(contactActive) { %>
+            <a href="/contact" <% if(contactActive) { %>
               class="navheader-menu-link nav-link active" <% } else { %> class="navheader-menu-link
               nav-link" <% } %>>Liên hệ & Giúp đỡ</a
             >
