--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -173,7 +173,14 @@
                 </li>
                 <% } %> <% if(user) { %>
                 <li class="auth-item">
-                  <a href="/setting" class="auth-link"><i class="fa-solid fa-gear"></i>Cài đặt</a>
+                  <a href="/user/profile" class="auth-link"
+                    ><i class="fa-solid fa-user"></i>Hồ sơ cá nhân</a
+                  >
+                </li>
+                <li class="auth-item">
+                  <a href="/user/history" class="auth-link"
+                    ><i class="fa-solid fa-clock"></i>Nhật ký hoạt động</a
+                  >
                 </li>
                 <% } %>
               </ul>
