--- a/views/admin/partials/barChart.view.ejs
+++ b/views/admin/partials/barChart.view.ejs
@@ -2,6 +2,6 @@
 <div class="d-none" id="bar-chart-labels" data-value="<%= labels %>"></div>
 <div class="d-none" id="bar-chart-axis" data-value="<%= axis ? 'x' : 'y' %>"></div>
 <div class="d-none" id="bar-chart-data" data-value="<%= data %>"><%= data %></div>
-<div class="chart-container" style="width: 100%; height: 400px">
+<div class="chart-container" style="width: 100%; aspect-ratio: 15 / 5">
   <canvas id="bar-chart"></canvas>
 </div>
