--- a/views/client/pages/home/index.view.ejs
+++ b/views/client/pages/home/index.view.ejs
@@ -378,6 +378,7 @@
     <script src="/client/scripts/product/toggleSearchProduct.js"></script>
     <script src="/client/scripts/cart/deleteProductInCart.js"></script>
     <script src="/client/scripts/cart/changeProductQuantity.js"></script>
+    <script src="/client/scripts/scrollReload.js"></script>
     <!-- End Scripts File -->
 
     <!-- Scripts Library & Framework Link -->
