complete product like feature client (add product like, delete product like,...)

--- a/public/client/styles/pages/cart/cart.css
+++ b/public/client/styles/pages/cart/cart.css
@@ -71,6 +71,13 @@
   color: var(--dark-gray-color);
   font-size: var(--icon-font-size);
 }
+.card-bg .card-favorite i {
+  font-size: var(--icon-font-size);
+  color: var(--dark-gray-color);
+}
+.card-bg .card-favorite.active i {
+  color: var(--error-color);
+}
 .card-bg .card-rating .card-star i {
   font-size: var(--icon-font-size2);
   color: var(--dark-gray-color);
