--- a/views/client/pages/home/index.view.ejs
+++ b/views/client/pages/home/index.view.ejs
@@ -219,8 +219,10 @@
                       }).format(Number.parseFloat(product.price - (product.price / 100 *
                       product.discount))) %>
                     </h5>
-                    <div class="card-favorite">
-                      <i class="bi bi-suit-heart-fill"></i>
+                    <div class="card-favorite <% if(product.isLike) { %>active<% } %>">
+                      <button class="border-0 btn-add-favorite" data-id="<%= product.id %>">
+                        <i class="bi bi-suit-heart-fill"></i>
+                      </button>
                     </div>
                   </div>
                   <div class="content-font text-danger text-decoration-line-through">
@@ -302,8 +304,10 @@
                       }).format(Number.parseFloat(product.price - (product.price / 100 *
                       product.discount)))%>
                     </h5>
-                    <div class="card-favorite">
-                      <i class="bi bi-suit-heart-fill"></i>
+                    <div class="card-favorite <% if(product.isLike) { %>active<% } %>">
+                      <button class="border-0 btn-add-favorite" data-id="<%= product.id %>">
+                        <i class="bi bi-suit-heart-fill"></i>
+                      </button>
                     </div>
                   </div>
                   <div class="content-font text-danger text-decoration-line-through">
@@ -372,12 +376,20 @@
       id="form-change-quantity-cart"
     ></form>
 
+    <form
+      action="/products/add-favorite"
+      method="POST"
+      class="d-none form-add-favorite"
+      id="form-add-favorite"
+    ></form>
+
     <!-- Scripts File -->
     <script src="/client/scripts/alertMessage.js"></script>
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
     <script src="/client/scripts/product/toggleSearchProduct.js"></script>
     <script src="/client/scripts/cart/deleteProductInCart.js"></script>
     <script src="/client/scripts/cart/changeProductQuantity.js"></script>
+    <script src="/client/scripts/addProductLike.js"></script>
     <script src="/client/scripts/scrollReload.js"></script>
     <!-- End Scripts File -->
 
