--- a/views/client/pages/product/productDetail.view.ejs
+++ b/views/client/pages/product/productDetail.view.ejs
@@ -172,7 +172,12 @@
                     <i class="me-1 fa fa-shopping-basket"></i> Add to cart
                   </button>
                   <% } %>
-                  <button type="button" href="#" class="button-primary text-decoration-none">
+                  <button
+                    type="button"
+                    href="#"
+                    class="button-primary text-decoration-none btn-add-favorite"
+                    data-id="<%= product._id %>"
+                  >
                     <i class="me-1 fa fa-heart fa-lg"></i> Save
                   </button>
                 </form>
@@ -233,8 +238,10 @@
                     }).format(Number.parseFloat(product.price - (product.price / 100 *
                     product.discount))) %>
                   </h5>
-                  <div class="card-favorite">
-                    <i class="bi bi-suit-heart-fill"></i>
+                  <div class="card-favorite <% if(product.isLike) { %>active<% } %>">
+                    <button class="border-0 btn-add-favorite" data-id="<%= product._id %>">
+                      <i class="bi bi-suit-heart-fill"></i>
+                    </button>
                   </div>
                 </div>
                 <div class="content-font text-danger text-decoration-line-through">
@@ -278,6 +285,13 @@
       id="form-change-quantity-cart"
     ></form>
 
+    <form
+      action="/products/add-favorite"
+      method="POST"
+      class="d-none form-add-favorite"
+      id="form-add-favorite"
+    ></form>
+
     <!-- Scripts File -->
     <script src="/client/scripts/alertMessage.js"></script>
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
@@ -287,6 +301,7 @@
     <script src="/client/scripts/product/toggleSearchProduct.js"></script>
     <script src="/client/scripts/cart/deleteProductInCart.js"></script>
     <script src="/client/scripts/cart/changeProductQuantity.js"></script>
+    <script src="/client/scripts/addProductLike.js"></script>
     <script src="/client/scripts/scrollReload.js"></script>
     <!-- End Scripts File -->
 
