--- a/views/client/pages/cart/cart.view.ejs
+++ b/views/client/pages/cart/cart.view.ejs
@@ -114,7 +114,10 @@
                           >
                             <i class="bi bi-x-lg"></i>
                           </button>
-                          <button class="button-icon-primary cart-body-product-like">
+                          <button
+                            class="button-icon-primary cart-body-product-like btn-add-favorite"
+                            data-id="<%= product.productInfo._id %>"
+                          >
                             <i class="bi bi-heart-fill"></i>
                           </button>
                         </div>
@@ -227,8 +230,10 @@
                     }).format(Number.parseFloat(product.price - (product.price / 100 *
                     product.discount))) %>
                   </h5>
-                  <div class="card-favorite">
-                    <i class="bi bi-suit-heart-fill"></i>
+                  <div class="card-favorite <% if(product.isLike) { %>active<% } %>">
+                    <button class="border-0 btn-add-favorite" data-id="<%= product.id %>">
+                      <i class="bi bi-suit-heart-fill"></i>
+                    </button>
                   </div>
                 </div>
                 <div class="content-font text-danger text-decoration-line-through">
@@ -273,12 +278,20 @@
       id="form-change-quantity-cart"
     ></form>
 
+    <form
+      action="/products/add-favorite"
+      method="POST"
+      class="d-none form-add-favorite"
+      id="form-add-favorite"
+    ></form>
+
     <!-- Scripts File -->
     <script src="/client/scripts/alertMessage.js"></script>
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
     <script src="/client/scripts/product/toggleSearchProduct.js"></script>
     <script src="/client/scripts/cart/deleteProductInCart.js"></script>
     <script src="/client/scripts/cart/changeProductQuantity.js"></script>
+    <script src="/client/scripts/addProductLike.js"></script>
     <script src="/client/scripts/scrollReload.js"></script>
     <!-- End Scripts File -->
 
